--- a/prokh_kim_2016.tex
+++ b/prokh_kim_2016.tex
@@ -898,22 +898,28 @@ I_N \approx I = \displaystyle{\lim_{n \to \infty}I_n}.
 Представление искомой функции в таком виде имеет наглядное
 физическое представление. Каждый член последовательности $I_n$
 является аппроксимацией функции $I$. Применение оператора
-$\mathcal{PB} + \mathcal{ES}$ к   элементу последовательности
+$\mathcal{PB} + \mathcal{ES}$ к элементу последовательности
 $I_{n-1}$ определяет вклад излучения, испытавшего не более, чем
 $n$ актов взаимодействия со средой, а слагаемое $I_0$ учитывает
-вклад излучения, пришедшего от источников, ни разу не
-провзаимодействовав со средой.
+вклад излучения, пришедшего от источников без взаимодействия со средой.
 
 
 
-Для вычисления функции $I$ по формуле \label{neumann_recur}  будем
-использовать некоторые модификации метода Монте-Карло,
-различающиеся друг от друга построением траекторий.
+Для вычисления значений $I_n$ по формулам (\ref{neumann_recur}) будем
+использовать несколько модификации метода Монте-Карло,
+различающиеся друг от друга построением траекторий. 
+Согласно методу Монте-Карло, приближённое значение $I_N$ будет 
+вычисляться как среднее значения для выборки случайной величины $\Upsilon_N$ ,      % Если мы будем использовать ипсилон, 
+мат. ожидание которого равно $I_N$.                                                 % то придётся заменить везде дальше
+\begin{equation}
+I_N = \mathbf{M}[\Upsilon_N] = \displaystyle{\lim_{M \to \infty} \frac{1}{M} \sum_{m=0}^{M} (\Upsilon_N)_{m}} 
+\approx \overline{\Upsilon_N}
+\end{equation}
 
-Введем обозначения для величин $t_i$ и $z_i$:
+Введем обозначения для величин $t_i$ и $z_i$:   % Я думаю, правильно написать: "обозначения для граничных точек"
 $$
-t_i=t_i(r,-\omega,t)=r-d(r,-\omega,t)/v_i, \quad z_i=
-z_i(r,\omega,t) = r - d(r,-\omega, t)\omega = r -(t - t_i) v_i
+t_i=t_i(r,-\omega,t)=r-d(r,-\omega,t)/v_i, \quad z_i=           % мне не нравится индекс i, но без него нужно использовать другие переменные
+z_i(r,\omega,t) = r - d(r,-\omega, t)\omega = r -(t - t_i) v_i  % я бы всё таки использовал z_r, z_t
 \omega.
 $$
 Через $t_i$ обозначено время, затрачиваемое частицей на путь от
@@ -922,20 +928,20 @@ G_i$) в направлении вектора $\omega$, при условии, что $t_i<t$. В
 противном случае $t_i=t$ и $z_i=r-v_i t$.
 
 
-1. {\it Алгоритм с ветвлением.} При построении $m-$ой траектории
+1. {\it Алгоритм с ветвлением.} При построении $m$-ой траектории
 (дерева траекторий) для нахождения значения $I_{N,m}$ в точке
 $(r,\omega,t) \in G_i \times \Omega \times [0,\infty)$ вычисляется
 функция $I_{N-1,m}$ в трех других точках $(z_i, \omega_{re}, t_i),
 (z_i, \omega_{tr}, t_i)$ и $(r - \tau_m\omega, \omega_m, t - \tau
 /v_i)$ и полагается:
 \begin{multline}
-I_{N,m}(r,\omega,t) = \exp(-\mu_i d(r,-\omega,t)) (h(z_i, \omega,
+I_{N,m}(r,\omega,t) = \exp(-\mu_i d(r,-\omega,t)) (h(z_i, \omega,       % Я еще раз подумал, всё еще против индекса m в I_{N,m}
 t_i) + \mathcal{B}I_{N-1,m}^+ (z_i, \omega, t_i) + \\ + \frac{1 -
 \exp(-\mu_i d(r,-\omega,t))}{\mu_i} (J(r - \tau_m\omega, \omega, t
 - \tau /v_i) + \sigma_i I_{N-1,m}(r - \tau_m \omega, \omega_m, t -
 \tau_m /v_i)),
 \end{multline}
-\begin{equation}
+\begin{equation}                                                        % Эту часть теперь можно не писать, она описана выше
   \overline{I}_{N,M} = \frac{1}{M}\sum_{m = 0}^M I_{N,m}.
 \end{equation}
 В (41) значения  $\tau_m$  есть реализации случайной величины
